--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "react-day-picker": "^9.7.0",
         "react-dom": "^19.0.0",
         "react-fast-marquee": "^1.6.5",
+        "react-use-storage": "^0.5.1",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
